--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 [Ll]ogs/
 [Mm]emoryCaptures/
 [Uu]ser[Ss]ettings/
-
+com.bezi.sidekick/
+.bezisidekick/
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
